# bcalc

./: Changelog  Makefile.in  README  README.md  configure  configure.ac
src/: Makefile.in  bcalc.c  bcalc.h  config.h.in  curses-ui.c  curses-ui.h  drmath.c  drmath.h  gtk2-ui.c  gtk2-ui.h  readline-ui.c  readline-ui.h  text-ui.c  text-ui.h  wraper-ui.c  wraper-ui.h
